5524
Actually this bug is invalid.  You're shadowing intWrapper, so 3 to 5 happily uses longWrapper instead.  Have to work pretty hard to mask everything which might handle Int, but:
{code}
object foo {
  object Donotuseme
  implicit def any2Ensuring[A](x: A) = Donotuseme
  implicit def doubleWrapper(x: Int) = Donotuseme
  implicit def floatWrapper(x: Int) = Donotuseme
  implicit def intWrapper(x: Int) = Donotuseme
  implicit def longWrapper(x: Int) = Donotuseme
  implicit def any2ArrowAssoc[A](x: A) = Donotuseme
  3 to 5
  5 ensuring true
  3 -> 5
}
{code}
{noformat}
test/files/neg/t4271.scala:12: error: value to is not a member of Int
  3 to 5
    ^
test/files/neg/t4271.scala:13: error: value ensuring is not a member of Int
  5 ensuring true
    ^
test/files/neg/t4271.scala:14: error: value -> is not a member of Int
  3 -> 5
    ^
three errors found
{noformat}
